Refactor: Clean up Topbar, hide unused settings/search, and rename Dashboard breadcrumb

--- a/frontend/src/app/layout/app.layout.component.html
+++ b/frontend/src/app/layout/app.layout.component.html
@@ -10,5 +10,5 @@
         <div class="layout-mask"></div>
     </div>
     <app-profilemenu></app-profilemenu>
-    <app-config></app-config>
+    <!-- <app-config></app-config> -->
 </div>
