--- a/frontend/src/app/demo/components/dashboards/ecommerce/ecommerce.dashboard.component.html
+++ b/frontend/src/app/demo/components/dashboards/ecommerce/ecommerce.dashboard.component.html
@@ -172,31 +172,69 @@
 
     <!-- Vista para el Usuario Normal (tus reservas) -->
     <div class="col-12" *ngIf="!isAdminOrManager()">
-        <div class="card">
-            <h5 class="m-0 mb-4">Tus Próximas Reservas</h5>
-            <p-table [value]="displayBookings" [rows]="5" [paginator]="true" responsiveLayout="scroll">
-                <ng-template pTemplate="header">
-                    <tr>
-                        <th pSortableColumn="resource.name">Recurso <p-sortIcon field="resource.name"></p-sortIcon></th>
-                        <th pSortableColumn="startDate">Fecha <p-sortIcon field="startDate"></p-sortIcon></th>
-                        <th pSortableColumn="status">Estado <p-sortIcon field="status"></p-sortIcon></th>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-booking>
-                    <tr>
-                        <td>{{booking.resource.name}}</td>
-                        <td>{{booking.startDate | date: 'dd/MM/yy, h:mm a'}}</td>
-                        <td>
-                            <span [class]="'customer-badge status-' + booking.status.toLowerCase()">{{booking.status}}</span>
-                        </td>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="emptymessage">
-                    <tr>
-                        <td colspan="3">No tienes reservas próximas.</td>
-                    </tr>
-                </ng-template>
-            </p-table>
+        <div class="grid">
+
+            <!-- Columna Izquierda: Tabla de Reservas -->
+            <div class="col-12 lg:col-8">
+                <div class="card">
+                    <div class="flex justify-content-between align-items-center mb-4">
+                        <div>
+                            <h5 class="m-0">Tus Reservas</h5>
+                            <span class="text-500" *ngIf="selectedDate">Mostrando reservas para el {{ selectedDate | date: 'dd/MM/yyyy' }}</span>
+                            <span class="text-500" *ngIf="!selectedDate">Mostrando todas tus reservas</span>
+                        </div>
+                        <button pButton type="button" label="Limpiar Filtro" icon="pi pi-filter-slash" class="p-button-outlined" (click)="clearFilter()" *ngIf="selectedDate"></button>
+                    </div>
+
+                    <p-table #dt [value]="displayBookings" [rows]="5" [paginator]="true" [globalFilterFields]="['resource.name', 'startDate', 'status']" responsiveLayout="scroll">
+                        <ng-template pTemplate="caption">
+                            <div class="flex justify-content-end">
+                                <span class="p-input-icon-left">
+                                    <i class="pi pi-search"></i>
+                                    <input pInputText type="text" (input)="dt.filterGlobal(getEventTargetValue($event), 'contains')" placeholder="Buscar..." />
+                                </span>
+                            </div>
+                        </ng-template>
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th pSortableColumn="resource.name">Recurso <p-sortIcon field="resource.name"></p-sortIcon></th>
+                                <th pSortableColumn="startDate">Fecha <p-sortIcon field="startDate"></p-sortIcon></th>
+                                <th pSortableColumn="status">Estado <p-sortIcon field="status"></p-sortIcon></th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-booking>
+                            <tr>
+                                <td>{{booking.resource.name}}</td>
+                                <td>{{booking.startDate | date: 'dd/MM/yy, h:mm a'}}</td>
+                                <td>
+                                    <span [class]="'customer-badge status-' + booking.status.toLowerCase()">{{booking.status}}</span>
+                                </td>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="emptymessage">
+                            <tr>
+                                <td colspan="3">No tienes reservas próximas.</td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                </div>
+            </div>
+
+            <!-- Columna Derecha: Calendario -->
+            <div class="col-12 lg:col-4">
+                <div class="card">
+                    <h5>Calendario de Reservas</h5>
+                    <p-calendar [(ngModel)]="selectedDate" (onSelect)="onDateSelect($event)" [inline]="true" [showWeek]="false">
+                        <ng-template pTemplate="date" let-date>
+                            <div style="position: relative">
+                                <span>{{date.day}}</span>
+                                <span *ngIf="isBooked(date)" class="booking-indicator"></span>
+                            </div>
+                        </ng-template>
+                    </p-calendar>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
