--- a/frontend/src/assets/layout/styles/layout/_sidebar_slim.scss
+++ b/frontend/src/assets/layout/styles/layout/_sidebar_slim.scss
@@ -103,9 +103,9 @@
                         left: 4rem;
                         top: 0;
                         min-width: 15rem;
-                        background: var(--menu-popup-bg, var(--primary-900));
+                        background: var(--menu-popup-bg, var(--primary-400));
                         border-radius: var(--border-radius);
-                        box-shadow: var(--sidebar-shadow);
+                        //box-shadow: var(--sidebar-shadow);
                         padding: 0.5rem;
                         max-height: 20rem;
                         overflow: auto;
