--- a/frontend/src/assets/layout/styles/layout/_sidebar_vertical.scss
+++ b/frontend/src/assets/layout/styles/layout/_sidebar_vertical.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
 
 
-    background: var(--menu-bg);
+    background: var(--primary-400);
     border-right: none;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 3px 5px, rgba(0, 0, 0, 0.05) 0px 0px 2px, rgba(0, 0, 0, 0.08) 0px 1px 4px;
 
